<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SesionFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="3dp"
        app:srcCompat="@drawable/login_1_1" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="347dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtLoginUserL"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_action_user"
                android:ems="10"
                android:hint="@string/usr"
                android:inputType="textMultiLine"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/txtLoginPassL"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:drawableLeft="@drawable/ic_action_pass"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="175dp"
                android:layout_height="29dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:text="@string/olvido"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnLoginL"
                android:layout_width="275dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/background_dark"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/iniciar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLoginPassL" />
            <View
                android:id="@+id/divider2"
                android:layout_width="304dp"
                android:layout_height="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/btnCrearCuentaL"
                android:layout_width="275dp"
                android:layout_height="45dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="40dp"
                android:background="@android:color/background_dark"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/registrar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.052"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>